@@ -7,6 +7,8 @@
 	* lisp/sawfish/wm/windows.jl
 	* lisp/sawfish/wm/commands/move-resize.jl: Honour ICCCM Aspect Ratio [Andrea Vetorello]
 
+	* lisp/sawfish/wm/viewport.jl: Added Animated Viewport Scrolling [Fernando Carmona Varo]
+
 2008-11-03  Christopher Bratusek <nano-master@gmx.de>
 	* configure.in: minimum pango version is 1.8.0
 
